WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237232
Scrollbars disappear when very long or wide
https://bugs.webkit.org/show_bug.cgi?id=237232
Summary
Scrollbars disappear when very long or wide
Simon Fraser (smfr)
Reported
2022-02-25 19:48:19 PST
Scrollbars disappear when very long or wide
Attachments
Patch
(10.10 KB, patch)
2022-02-25 19:51 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-02-25 19:51:01 PST
Created
attachment 453283
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-02-25 19:51:04 PST
<
rdar://problem/17540446
>
EWS
Comment 3
2022-02-25 23:59:58 PST
Committed
r290545
(
247823@main
): <
https://commits.webkit.org/247823@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453283
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug